salesforce-main/src/main/default/objects/Order/fields/Billing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Mode__c</fullName>
    <label>Billing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billed off-system</fullName>
            </value>
            <value>
                <fullName>Billed in Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>