salesforce-main/src/main/default/objects/Order/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>Billing Type. This value is inherited from the Quote. For any in advance billing, the order will be excluded to a separate batch to avoid it from being picked up on by any invoice run. Billing in advance requires the &apos;Bill Now&apos; to be used in the Order.</description>
    <inlineHelpText>Billing Type. This value is inherited from the Quote. For any in advance billing, the order will be excluded to a separate batch to avoid it from being picked up on by any invoice run. Billing in advance requires the &apos;Bill Now&apos; to be used in the Order.</inlineHelpText>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingType</valueSetName>
    </valueSet>
</CustomField>