salesforce-main/src/main/default/objects/Order/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <description>Twin field with Quote&apos;s Booking Type</description>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Types</valueSetName>
    </valueSet>
</CustomField>