salesforce-main/src/main/default/objects/Order/fields/BPP_Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>BPP_Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <type>TextArea</type>
</CustomField>