salesforce-main/src/main/default/objects/Order/fields/BPP_Invoice__c.field-meta.xml
<CustomField>
    <fullName>BPP_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice relating to the order - enables multiple orders to be viewed from the (consolidated) invoice</description>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>