salesforce-main/src/main/default/objects/Order/fields/Deliver_Materials_to_Student__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Materials_to_Student__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defaults to &quot;Checked&quot; for all student orders. Company orders are set by default by the corresponding value on the company account.</description>
    <inlineHelpText>When checked materials for bookings related to this order will be sent to the student(s), uncheked will send to the Account</inlineHelpText>
    <label>Deliver Materials to Student</label>
    <type>Checkbox</type>
</CustomField>