salesforce-main/src/main/default/objects/Order/fields/Invoice_Comments__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Comments__c</fullName>
    <description>Text that will be printed on the proforma and invoice</description>
    <label>Invoice Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>