salesforce-main/src/main/default/objects/Order/fields/Invoice_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Consolidation__c</fullName>
    <description>If this is manual invoicing or invoicing in advance, this order should not be taken into account for invoice consolidation.</description>
    <formula>IF (ISPICKVAL(Billing_Type__c , &quot;In Advance&quot;)  ||  Contains(TEXT(blng__InvoiceBatch__c),&quot;Manual&quot;), FALSE, TRUE)</formula>
    <inlineHelpText>For manual invoicing or invoicing in advance, this order should not be taken into account for invoice consolidation/separation.</inlineHelpText>
    <label>Invoice Consolidation</label>
    <type>Checkbox</type>
</CustomField>